[project]
name = "supply_chain_multi_agent"
version = "0.1.0"
description = "Multi-agent orchestration system for supply chain management using LangGraph"
requires-python = ">=3.10"
dependencies = [
    "langgraph",
    "langchain-openai",
    "langchain-core",
    "langchain-community",
    "pydantic",
    "python-dotenv",
    "langchain>=1.2.15",
    "rich>=15.0.0",
    "copilotkit>=0.1.86",
    "ag-ui-langgraph>=0.0.32",
    "fastapi>=0.135.3",
    "uvicorn>=0.44.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agents", "tools", "config"]
